k8s/frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-frontend
  labels:
    app: chattingo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-frontend
  template:
    metadata:
      labels:
        app: chattingo-frontend
    spec:
      containers:
        - name: frontend
          image: harshavardhan303/chattingo-frontend:33
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
