k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chattingo
spec:
  selector:
    app: chattingo-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
